# ultimate_life_os_backend

./: .dockerignore  .env.example  .gitignore  DATABASE_UV_ALEMBIC.md  Dockerfile  README.md  alembic.ini  app.py  init_db.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
app/: auth.py  database.py  dependencies.py  gamification_service.py  models.py  schemas.py
app/core/: security.py
app/middleware/: security.py
app/routers/: analytics_router.py  auth_router.py  finance_router.py  partner_router.py  productivity_router.py  profile_router.py  reward_router.py
app/services/: auth_service.py  database_bootstrap.py  finance_service.py  gamification_service.py  partner_service.py  productivity_service.py  user_service.py
app/utils/: money.py  time.py
migrations/: 001_remove_stamina_balance.sql  002_numeric_goals_time_deadlines.sql  003_weighted_okr_key_result_history.sql  004_budget_period_dates.sql  005_audit_time_gamification.sql  006_finance_events.sql  007_money_numeric_constraints.sql  008_task_streak_achievements.sql  009_link_activity_logs_to_time_sessions.sql  009_notifications_scheduler_admin.sql  010_integrity_indexes_and_guards.sql  011_time_activity_seconds_custom_category.sql  012_task_priority.sql  013_task_recurrence_days.sql  014_task_occurrence_skips.sql  015_task_start_date.sql  016_habit_description.sql  017_create_micro_tasks.sql  018_drop_micro_tasks.sql  env.py
migrations/versions/: 0001_initial_schema.py  0002_add_task_priority.py  0003_add_task_recurrence_days.py  0004_add_task_occurrence_skips.py  (+4 more)
