[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "pydantic[email]>=2.0",
    "psycopg2-binary>=2.9",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29",
]
